# rapier

.github/workflows/: build-rapier-c.yml  python-bindings.yml  python-wheels.yml  rapier-ci-bench.yml  rapier-ci-build.yml
crates/rapier-c/: .gitignore  Cargo.toml  README.md
crates/rapier-c/include/: rapier_c.h
crates/rapier-c/scripts/: _stage.sh  build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-windows.sh
crates/rapier-c/src/: lib.rs
crates/rapier-c/tests/: smoke.c
